--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,11 +13,13 @@
     "@clerk/clerk-react": "^5.31.2",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6"
   },
