--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6"
