--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "yeldamm": "nodemon src/index.js",
+    "seed:songs": "node src/seeds/songs.js",
+    "seed:albums": "node src/seeds/albums.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
