--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.31.2",
+    "@clerk/clerk-react": "^5.31.4",
+    "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
@@ -22,7 +23,8 @@
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
